--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/teacher.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Marissa Solis - Bilingual Teacher</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Marissa Solis</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Marissasolis.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,19 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Marissa Solis
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Bilingual Teacher👩‍🏫</div>
+        <p class="lead mb-4">I am a current undergraduate student at University of California Riverside majoring in Education and minoring in Spanish. I am a first generation student and started my educational journey at a community college and worked my way to a four year university. While at MiraCosta College I learned the importance of staying involved and making connections which has helped me accomplish a lot in my journey thus far. As an undergrad I have been heavily involved on campus by co-founding the Puente Connection organization, which focuses on helping transfer students adjust to the quarter system. I also became a peer educator for incoming transfer students, I was able to provide a workshop to provide resources and mentorship.<br><br>
+        I have also worked with the undergraduate admissions office for over two years. Here I have gained experience advising community college students on the admissions requirements to UCR. I also had the opportunity to promote my university at college fairs. I obtained knowledge on evaluating transcripts to further advise students on meeting requirements. I was also able to share my transfer experience with prospective students while helping on campus events such as open houses. I focus on helping cohorts of students who belong to the Puente Project and affiliates.  Lastly, I was able to be part of the logistics team for the UCR Puente Leadership and Writers conferences in the summer. Currently, I am also working with a non profit organization called BLU Educational Foundation. This organization works with high school seniors who are not considered “college bound” to get them into at least one college or university. I am part of the college advisors who helps these students apply for financial aid, college applications and the retention of these students once they are in college. We focus specifically on African American and Latinx students who are first generation. We also work with the parents of these students to inform them of what their children are doing and how they can support their students in this new stage of their educational journey.<br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        During my last year as an undergraduate I had the great opportunity to study abroad for four months in the city of Bologna Italy where I was able to further my language skills. This experience has been by far the most impactful in my personal and professional development. I had the chance to have an internship with PACE in English, where I was a teacher’s assistant. We provided English courses for kids as young as 1 year old to 8 year olds. However, this experience was very unique because our teaching method was through music and art. It was amazing to see how these young italian children were able to learn so much vocabulary from these fun and entertaining activities. These months far away from my country opened my mind to a lot of different cultures and ideas. I was also able to travel to other countries such as Germany, Spain, France and Croatia. I believe this opportunity allowed me to meet so many people from diverse backgrounds which exposed me to greater knowledge.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/MarissaSolis">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:msoli018@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +85,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Puente Peer Mentor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">University of California Riverside</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Presented to Puente Project cohorts at community colleges all around Southern California X<br> 
+              • Assist perspective students with the admissions requirements<br>
+              • Participated in the logistics team for the UCR Puente Leadership and Writers Confrences during the summer<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">February 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">College Success Advisor- Virtual</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">BLU Educational Foundation</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Provide individual and small group advising to High School students<br>
+              • Assist with and participate in special events/projects as needed<br>
+              • Assist with completion and follow-up of college, financial aid, and scholarship applications<br>
+              
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">May 2020 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Peer Educator</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Developed lesson plans in collaboration with faculty and taught small groups of students on a weekly basis, being prompt and well prepared for each session.<br>
+            • Met with program participants one-on-one and in small groups to assess student needs; assist students with academics, social and personal concerns; and refer students to appropriate campus resources.<br>
+            • Facilitated a smooth transition to for transfer students by listening, using personal experience and providing resources.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">April 2018 - December 2018</span>
           </div>
         </div>
 
@@ -152,35 +146,25 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">B.A. Education, Society, and Human Development</div>
+            <div>Concentration in Community Leadership, Policy and Social Justice</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2017 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">MiraCosta Community College</h3>
+            <div class="subheading mb-3">A.A. in Liberal Arts </div>
+            <div>Emphasis in Arts and Hummanities</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2014 - May 2017</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -191,7 +175,15 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/portfolio1.jpg" width="500px">
+            
+            <img src="img/portfolio2.jpg" width="500px">
+            <br>
+            <img src="img/portfolio3.jpg" width="500px">
+            <img src="img/portfolio4.jpg" width="500px">
+            <br>
+            <img src="img/portfolio5.jpg" width="500px">
+            <img src="img/portfolio6.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +191,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Marissa Solis</center><br>
 
 
   </div>
